# env

./: CMakeLists.txt  README.md
.github/workflows/: env-cross-platform-ci.yml  env-strict-ci.yml
cmake/: vix_envConfig.cmake.in
include/vix/env/: Env.hpp  EnvError.hpp  EnvFile.hpp  EnvFileOptions.hpp  EnvOptions.hpp  EnvResolver.hpp  EnvResult.hpp  Get.hpp  GetBool.hpp  GetDouble.hpp  GetInt.hpp  GetOr.hpp  GetUint.hpp  Has.hpp  LoadFile.hpp  LoadIntoProcess.hpp  LoadLayered.hpp  ParseContent.hpp  ParseLine.hpp  Set.hpp  Unset.hpp
src/: EnvFile.cpp  EnvResolver.cpp  Get.cpp  GetBool.cpp  GetDouble.cpp  GetInt.cpp  GetOr.cpp  GetUint.cpp  Has.cpp  LoadFile.cpp  LoadIntoProcess.cpp  LoadLayered.cpp  ParseContent.cpp  ParseLine.cpp  Set.cpp  Unset.cpp
test/: CMakeLists.txt  get_bool_test.cpp  get_double_test.cpp  get_int_test.cpp  get_test.cpp  get_uint_test.cpp  has_test.cpp  load_env_file_test.cpp  load_file_test.cpp  load_layered_test.cpp  parse_content_test.cpp  parse_line_test.cpp  resolve_env_file_test.cpp  set_test.cpp  unset_test.cpp
